[gd_scene load_steps=22 format=3 uid="uid://de4bn0kx6ioon"]

[ext_resource type="Script" uid="uid://mwd77t14daoc" path="res://scripts/game.gd" id="1_dsluy"]
[ext_resource type="Texture2D" uid="uid://bw3yxw11vxnpt" path="res://assets/images/boulder.png" id="1_xqd24"]
[ext_resource type="Script" uid="uid://bbano1pbv5i60" path="res://scripts/objects/boulder.gd" id="2_8nrul"]
[ext_resource type="Texture2D" uid="uid://cge8gcvvbjllf" path="res://assets/images/rock.png" id="3_agdax"]
[ext_resource type="Script" uid="uid://c6iqrbej876ri" path="res://scripts/objects/rock.gd" id="3_lo42r"]
[ext_resource type="Texture2D" uid="uid://bu1xb8r0dyv80" path="res://assets/images/miner.png" id="4_xevy0"]
[ext_resource type="Script" uid="uid://deeeqrmmo0qix" path="res://scripts/objects/refinery.gd" id="6_8jypp"]
[ext_resource type="Texture2D" uid="uid://de3bfhj3mxpc7" path="res://assets/images/refinery.png" id="6_er1kq"]
[ext_resource type="Script" uid="uid://n1vx0h1lpfw8" path="res://scripts/master_repository.gd" id="7_b1hsf"]
[ext_resource type="Script" uid="uid://byc1pxe04fvlq" path="res://scripts/interface/boulder_menu.gd" id="8_mq3uq"]
[ext_resource type="Script" uid="uid://drsatgtxh7hax" path="res://scripts/interface/interface.gd" id="8_uqudx"]
[ext_resource type="Texture2D" uid="uid://fdsdpw77pw3q" path="res://assets/images/truck/truck_empty.png" id="9_j076i"]
[ext_resource type="Script" uid="uid://c53ox2kbq2jl5" path="res://scripts/objects/truck.gd" id="9_txr7u"]
[ext_resource type="Script" uid="uid://brt10c5me2gsy" path="res://scripts/objects/miner.gd" id="14_8iagh"]
[ext_resource type="Script" uid="uid://j3y7tnh2u3f6" path="res://scripts/interface/camera.gd" id="15_vivmo"]
[ext_resource type="Script" uid="uid://betbcouvwc3t4" path="res://scripts/interface/refinery_menu.gd" id="16_2cqfq"]
[ext_resource type="Script" uid="uid://bo1nloojqve6i" path="res://truck_menu.gd" id="17_yaehf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bj2j"]
size = Vector2(495, 414.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0817"]
size = Vector2(30, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dl4yi"]
size = Vector2(140, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo1yq"]
size = Vector2(115, 90)

[node name="game_manager" type="Node2D"]
script = ExtResource("1_dsluy")

[node name="refinery" type="Area2D" parent="."]
position = Vector2(558, 407)
scale = Vector2(0.4, 0.4)
script = ExtResource("6_8jypp")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="refinery"]
texture = ExtResource("6_er1kq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="refinery"]
position = Vector2(1.5, -1.75)
shape = SubResource("RectangleShape2D_4bj2j")

[node name="truck_spawn" type="Node2D" parent="refinery"]
position = Vector2(397.5, 105)

[node name="masters" type="Node2D" parent="."]
visible = false
script = ExtResource("7_b1hsf")

[node name="master_truck" type="CharacterBody2D" parent="masters"]
position = Vector2(615, -79)
input_pickable = true
script = ExtResource("9_txr7u")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="masters/master_truck"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_j076i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="masters/master_truck"]
shape = SubResource("RectangleShape2D_m0817")

[node name="master_rock" type="Area2D" parent="masters"]
position = Vector2(684, -72)
scale = Vector2(0.2, 0.2)
script = ExtResource("3_lo42r")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="masters/master_rock"]
texture = ExtResource("3_agdax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="masters/master_rock"]
shape = SubResource("RectangleShape2D_dl4yi")

[node name="master_miner" type="Sprite2D" parent="masters"]
position = Vector2(555, -73)
scale = Vector2(0.13, 0.13)
texture = ExtResource("4_xevy0")
script = ExtResource("14_8iagh")

[node name="master_boulder" type="Area2D" parent="masters"]
position = Vector2(813, -75)
script = ExtResource("2_8nrul")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="masters/master_boulder"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_mo1yq")

[node name="Sprite2D" type="Sprite2D" parent="masters/master_boulder"]
position = Vector2(-0.6, 2.2)
scale = Vector2(5, 5)
texture = ExtResource("1_xqd24")

[node name="ProgressBar" type="ProgressBar" parent="masters/master_boulder"]
offset_left = -40.0
offset_top = -5.0
offset_right = 45.0
offset_bottom = 12.0
mouse_filter = 2
max_value = 1.0
show_percentage = false

[node name="miner_spawn" type="Node2D" parent="masters/master_boulder"]
position = Vector2(71, 4)

[node name="main_camera" type="Camera2D" parent="."]
position = Vector2(579, 325)
script = ExtResource("15_vivmo")

[node name="interface" type="Control" parent="main_camera"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = -1.0
script = ExtResource("8_uqudx")

[node name="dollar_count" type="RichTextLabel" parent="main_camera/interface"]
offset_left = -542.0
offset_top = -301.0
offset_right = -275.0
offset_bottom = -214.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 29
text = "rocks: %s"

[node name="selected_boulder" type="Control" parent="main_camera/interface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 861.0
offset_top = 376.0
offset_right = 1153.0
offset_bottom = 646.0
script = ExtResource("8_mq3uq")

[node name="boulder_name" type="RichTextLabel" parent="main_camera/interface/selected_boulder"]
layout_mode = 0
offset_left = 55.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 74.0
text = "I AM A BOULDER"

[node name="add_miner" type="Button" parent="main_camera/interface/selected_boulder"]
layout_mode = 0
offset_left = 73.0
offset_top = 186.0
offset_right = 177.0
offset_bottom = 230.0
text = "Add miner"

[node name="selected_refinery" type="Control" parent="main_camera/interface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 861.0
offset_top = 376.0
offset_right = 1153.0
offset_bottom = 646.0
script = ExtResource("16_2cqfq")

[node name="refinery_name" type="RichTextLabel" parent="main_camera/interface/selected_refinery"]
layout_mode = 0
offset_left = 55.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 74.0
text = "I AM A REFINERY"

[node name="buy_truck" type="Button" parent="main_camera/interface/selected_refinery"]
layout_mode = 0
offset_left = 73.0
offset_top = 186.0
offset_right = 177.0
offset_bottom = 230.0
text = "buy truck"

[node name="selected_truck" type="Control" parent="main_camera/interface"]
layout_mode = 1
anchor_right = 0.1
anchor_bottom = 0.1
offset_left = 862.0
offset_top = 377.0
offset_right = 1040.8
offset_bottom = 584.2
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("17_yaehf")

[node name="truck_name" type="RichTextLabel" parent="main_camera/interface/selected_truck"]
layout_mode = 0
offset_left = 55.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 74.0
text = "I AM A Truck"

[node name="select_boulder" type="Button" parent="main_camera/interface/selected_truck"]
layout_mode = 0
offset_left = 73.0
offset_top = 186.0
offset_right = 177.0
offset_bottom = 230.0
text = "select boulder
"
